# FactReasoner

./: pyproject.toml
docs/examples/assessors/: ex_factreasoner.py  ex_factreasoner_file.py  ex_factscore.py  ex_factscore_file.py  ex_factverify.py  ex_factverify_file.py  ex_veriscore.py  ex_veriscore_file.py
docs/examples/core/: ex_atomizer.py  ex_nli.py  ex_query.py  ex_retriever.py  ex_reviser.py  ex_summarizer.py
src/fact_reasoner/: assessor.py  search_api.py
src/fact_reasoner/core/: atomizer.py  retriever.py  utils.py
