[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fact_reasoner"
version = "0.5.9"
description = "Factuality Assessment for Foundation Models"
authors = [
    {name = "Radu Marinescu", email = "radu.marinescu@ie.ibm.com"},
    {name = "Javier Carnerero Cano", email = "javier.cano@ibm.com"},
    {name = "Massimiliano Pronesti", email = "massimiliano.pronesti@ibm.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4 (>=4.12.0)",
    "chromadb (>=1.0.15)",
    "langchain-community (>=0.3.27)",
    "langchain-core (>=0.3.71)",
    "langchain-huggingface (>=0.3.1)",
    "langchain-text-splitters (>=0.3.8)",
    "mellea (==0.4.0)",
    "wikipedia (>=1.4.0)",
    "networkx (>=3.5.0)",
    "nltk (>=3.8.0)",
    "numpy (>=2.2.6)",
    "pandas (>=2.3.1)",
    "pgmpy (==1.0.0)",
    "pypdf2 (>=0.2.1)",
    "pyparsing (>=3.2.3)",
    "python-dotenv (>=1.1.1)",
    "pyyaml (>=6.0.0)",
    "requests (>=2.31.0)",
    "thefuzz (>=0.22.1)",
    "torch (==2.8.0)",
    "tqdm (>=4.66.0)",
    "transformers (>=4.56.0)",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]

[project.urls]
Source = "https://github.com/IBM/FactReasoner"

[tool.hatch.build.targets.wheel]
packages = ["src/fact_reasoner"]

[tool.hatch.build.targets.sdist]
exclude = ["docs/", "data/", "lib/", "tests/"]
